DRAFT system: examples: Add bare-hurd.tmpl.
XXX This does not work yet.  Start of migration from

    ./pre-inst-env guix build -f gnu/system/hurd.scm

to

    ./pre-inst-env guix system vm-image --target=i586-pc-gnu gnu/system/examples/bare-hurd.tmpl

See also: <https://bugs.gnu.org/40839>; wip-disk-image.

* gnu/system/hurd.scm (hurd-grub-configuration-file): Add empty firmware, initrd.
Use lambda to empty initrd-modules proprely.
* gnu/system/examples/bare-hurd.tmpl: New file.
* Makefile.am (EXAMPLES): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -343,6 +343,7 @@ AUX_FILES =						\
 EXAMPLES =					\
   gnu/system/examples/asus-c201.tmpl		\
   gnu/system/examples/bare-bones.tmpl		\
+  gnu/system/examples/bare-hurd.tmpl		\
   gnu/system/examples/beaglebone-black.tmpl	\
   gnu/system/examples/desktop.tmpl		\
   gnu/system/examples/lightweight-desktop.tmpl	\
